# darcomage

./: .gitmodules  BUILDING-WIN32.TXT  BUILDING-WIN64.TXT  CMakeLists.txt  DESCRIPTION.TXT  README.MD  README.TXT
cmake/Modules/: CMakeDCompiler.cmake.in  FindSDL2.cmake
src/: CMakeLists.txt  font.d  frontend.d  graphics.d  input.d  opengl.d  sound.d  ttf.d
utils/: compile-dynamic.sh  compile-sharedluad.sh  compile.sh  darcomage.6  darcomage.desktop
